:bug: bug(tiles.scss): Added fix for tiles and overflowing content when it is in a smaller container class

--- a/src/ext/tiles.scss
+++ b/src/ext/tiles.scss
@@ -4,8 +4,8 @@
     display: -ms-flexbox;
     align-content: space-between; /* Ensure space between child elements of card tile */
     -webkit-align-content: space-between;
-    /* align-items: flex-start; Push elements to the top of container instead of center/bottom (removed since unneeded */
     -ms-flex-line-pack: justify; /* Evenly distribute lines */
+    overflow: auto;
     
     // /* Force elements to align at the center vertical height */ Deprecated in 0.6.0 in favor of u-items-center
     // &.tile.tile--center {
@@ -57,7 +57,7 @@
     }
     
     .tile__title {
-        line-height: 2rem;
+        line-height: 1.5rem;
         font-weight: bolder;
         margin: 0.1rem auto;
     }
